# cchess

./: .gitignore  CMakeLists.txt  README.md
includes/: bitboards.h  boards.structs.h  engine.h  global_structs.h  interface.h  magicBoardConstants.h  magicBoards.h  moves.h  piece.h  pieces.structs.h
includes/structs/: boards.structs.h  squares.structs.h
src/: CMakeLists.txt  bitboards.c  engine.c  interface.c  magicBoards.c  moves.c  perft.c  piece.c
test/: test.c
